Added feature to serve html page

--- a/web_server/manifests/deployment.yaml
+++ b/web_server/manifests/deployment.yaml
@@ -13,5 +13,5 @@ spec:
     spec:
       containers:
       - name: webserver
-        image: japanpatel0305/web_server:latest
+        image: japanpatel0305/web_server:1.5
         
